# dotfiles

./: .gitignore  .gitleaksignore  .gitmodules  .typos.toml  README.md  flake.nix
config/: emacs  nvim
config/doom/: config.el  init.el
config/doom-nvim/: doom_modules.lua
config/git/: config  global-gitignore
config/kitty/: kitty.conf
config/polybar/: launch.sh
config/skhd/: skhdrc
config/tmux/: tmux.conf
config/xmonad/: stack.yaml  xmonad-config.cabal
config/yabai/: yabairc
dirs/.doom.d/: init.el
dirs/doom-config/: +bindings.el  .gitignore  autoload.el  config.el  init.el  packages.el
dirs/doom-nvim-config/: doom_config.lua  doom_userplugins.lua
dirs/doom.d/: +bindings.el  +org.el  config.el  init.el  packages.el
dirs/xmonad-config/: .gitignore  .tool-versions  build  package.yaml  xmonad-config.cabal
dirs/xmonad-old/: LICENSE
home/: .chunkwmrc  .doom.d  .emacs.d  .global-gitignore  .jq  .skhdrc  .tmux.conf  .vimrc  .xinitrc  .xmonad  .xprofile  .yabairc  .zshenv  .zshrc  .zshrc.d
home-manager/base/: default.nix  home.nix  vars.nix
home-manager/darwin/: default.nix  editor.nix  emacs.nix  launcher.nix  rancher-desktop.nix  shell.nix
home-manager/nixos/: appearance.nix  default.nix  im.nix  (+1 more)
home/.xmonad/: .gitignore  build  xmonad-config.cabal
home/.xmonad/src/: Main.hs
lib/: default.nix  extended-stdlib.nix  linkRepo.nix  macosSystem.nix  mkSystem.nix  nixosSystem.nix  overlays.nix
modules/: README.md  base.nix
outputs/: default.nix
overlays/: default.nix  unstable.nix
shared/: jq
templates/: default  default.nix
(+526 files in other folders)
